# agentic-data-engineering-platform

./: .env.example  .gitignore  CLAUDE.md
backend/: config.py  main.py  pyproject.toml
backend/services/: jira_client.py
worklog/: 01-jira-integration.md
