[project]
name = "agentic-data-engineer-platform"
version = "0.1.0"
description = ""
authors = [
    {name = "dmdeekshithreddy",email = "159103766+dmdeekshithreddy@users.noreply.github.com"}
]
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn[standard] (>=0.43.0,<0.44.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
